--- a/gl-resources-app/src/App.css
+++ b/gl-resources-app/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+form {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  width: 500px;
+  margin: 0 auto;
 }
+ 
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  main {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 90vw;
+    margin: 0 auto;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  nav {
+    background-color: #D4FAB8;
+    padding: 10px;
   }
-  to {
-    transform: rotate(360deg);
+
+  a{
+    text-decoration: none;
+    color: black;
   }
-}
+
+  a:hover {
+    font-weight: bolder;
+  }
+
+  .navItem {
+    padding: 8px;
+    
+  }
+
+  .home{
+    text-align: center;
+  }
+
+  .resource{
+    background-color: lightgrey;
+    margin-left: 6px;
+    margin-right: 6px;
+    margin-top: 10px;;
+    padding: 16px;
+    border-radius: 15px;
+  }
