--- a/gl-resources-app/src/App.css
+++ b/gl-resources-app/src/App.css
@@ -1,46 +1,90 @@
+body{
+  font-family: 'Lato', sans-serif;
+}
+
 form {
   display: grid;
   grid-template-columns: 1fr 4fr;
   width: 500px;
   margin: 0 auto;
 }
- 
 
-  main {
+h1{
+  font-size: 40px;
+}
+
+main {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 20px;
     width: 90vw;
     margin: 0 auto;
   }
 
-  nav {
-    background-color: #D4FAB8;
+nav {
+    background-color: rgba(21, 68, 25, 0.62);
     padding: 10px;
   }
 
-  a{
+a{
     text-decoration: none;
-    color: black;
+    color: white;
   }
 
   a:hover {
     font-weight: bolder;
   }
 
-  .navItem {
-    padding: 8px;
-    
+  footer {
+    background-color: rgba(21, 68, 25, 0.62);
+    padding: 2px;
+    font-size: 12px;
+    text-align: center;
+    color: white;
   }
 
-  .home{
+  .hometop {
+    background-image: url("https://images.pexels.com/photos/4827/nature-forest-trees-fog.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+    text-align: center;
+    background-size: cover;
+    height: 100%;
+    padding-top: 50px;
+    padding-bottom: 200px;
+    background-position: top 40% right 0px;
+    background-repeat: no-repeat;
+  }
+
+  .homeDesc{
+    display: grid;
+    grid-template-columns: 4fr 5fr;
+    margin: 0 auto;
     text-align: center;
   }
 
+  .homeDesc p{
+    background-color: #EBECEA;
+    margin: 0 auto;
+    padding: 100px 100px 100px 100px;
+    font-size: 26px;
+  }
+
+  .navItem {
+    padding: 8px;
+  }
+
   .resource{
-    background-color: lightgrey;
+    background-color: rgb(169, 170, 170, 0.5);
     margin-left: 6px;
     margin-right: 6px;
-    margin-top: 10px;;
+    margin-top: 20px;;
     padding: 16px;
-    border-radius: 15px;
+    /* border-radius: 15px; */
+    text-align: center;
+    box-shadow: 0 0 5px 5px gray;
+    
+  }
+
+  .resize{
+    width: 100%;
+    height: auto;
   }
