--- a/gl-resources-app/src/App.css
+++ b/gl-resources-app/src/App.css
@@ -27,14 +27,11 @@ nav {
   }
 
 a{
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+    
   }
 
-  a:hover {
-    font-weight: bolder;
-  }
-
+  
   footer {
     background-color: rgba(21, 68, 25, 0.62);
     padding: 2px;
@@ -70,7 +67,12 @@ a{
 
   .navItem {
     padding: 8px;
+    color: white;
   }
+  .navItem:hover {
+    font-weight: bolder;
+  }
+
 
   .resource{
     background-color: rgb(169, 170, 170, 0.5);
@@ -78,13 +80,40 @@ a{
     margin-right: 6px;
     margin-top: 20px;;
     padding: 16px;
-    /* border-radius: 15px; */
     text-align: center;
-    box-shadow: 0 0 5px 5px gray;
+    box-shadow: 0 0 5px 5px rgb(170, 170, 170);
     
   }
 
   .resize{
     width: 100%;
     height: auto;
+  }
+
+  .resourceButton {
+    padding: 8px;
+    border: 0;
+    background-color: rgba(21, 68, 25, 0.5);
+    color: white;
+    
+  }
+
+  .resourceButton:hover {
+    box-shadow: inset 0 0 0 50px rgba(0, 0, 0, 0.2);
+    font-weight: bold;
+  }
+  
+  .addTop {
+    text-align: center;
+    background-image: url("https://images.pexels.com/photos/4503273/pexels-photo-4503273.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+    padding: 150px 0px 150px 0px;
+    background-size: cover;
+    background-position: top 60% right 0px;
+    background-repeat: no-repeat;
+  }
+
+  .addTop h1{
+    background-color: rgb(255, 255, 255, 0.7);
+    margin-left: 200px;
+    margin-right: 200px;
   }
