--- a/gl-resources-app/src/App.css
+++ b/gl-resources-app/src/App.css
@@ -4,9 +4,13 @@ body{
 
 form {
   display: grid;
-  grid-template-columns: 1fr 4fr;
-  width: 500px;
+  grid-template-columns: 2fr 7fr;
+  width: 600px;
   margin: 0 auto;
+  grid-row-gap: 8px;
+  font-size: 18px;
+  padding: 10px;
+  font-weight: bold;
 }
 
 h1{
@@ -17,8 +21,10 @@ main {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 20px;
-    width: 90vw;
-    margin: 0 auto;
+    width: 100vw;
+    background-color: #EBECEA;
+    
+    padding-bottom:10px;
   }
 
 nav {
@@ -39,6 +45,11 @@ a{
     text-align: center;
     color: white;
   }
+
+  form textarea {
+    height: 150px;
+    resize: none;
+}
 
   .hometop {
     background-image: url("https://images.pexels.com/photos/4827/nature-forest-trees-fog.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
@@ -90,7 +101,7 @@ a{
     height: auto;
   }
 
-  .resourceButton {
+  button {
     padding: 8px;
     border: 0;
     background-color: rgba(21, 68, 25, 0.5);
@@ -98,9 +109,24 @@ a{
     
   }
 
-  .resourceButton:hover {
+  button:hover {
     box-shadow: inset 0 0 0 50px rgba(0, 0, 0, 0.2);
     font-weight: bold;
+  }
+
+  .resourceTop {
+    text-align: center;
+    background-image: url("https://images.pexels.com/photos/5420575/pexels-photo-5420575.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+    padding: 150px 0px 150px 0px;
+    background-size: cover;
+    background-position: top 50% right 0px;
+    background-repeat: no-repeat;
+  }
+
+  .resourceTop h1 {
+    background-color: rgb(255, 255, 255, 0.7);
+    margin-left: 350px;
+    margin-right: 350px;
   }
   
   .addTop {
@@ -116,4 +142,13 @@ a{
     background-color: rgb(255, 255, 255, 0.7);
     margin-left: 200px;
     margin-right: 200px;
+  }
+
+  .addForm {
+    background-color: #EBECEA;
+  }
+
+  #submitButton {
+    margin-left: 350px;
+    margin-right: 0px;
   }
